# Meta-OpenXR-SDK

./: CONTRIBUTING.md  OPENXR_SDK_THIRD_PARTY_NOTICES.txt  README.md
Samples/: CMakeLists.txt  build.gradle  settings.gradle.kts
Samples/1stParty/OVR/Include/: JniUtils-inl.h  JniUtils.h  OVR_Asserts.h  OVR_BitFlags.h  OVR_Compiler.h  OVR_JSON.h  OVR_LogUtils.h  OVR_Math.h  OVR_SanitizerMacros.h  OVR_Std.h  OVR_Types.h  OVR_TypesafeNumber.h  StringUtils.h
Samples/SampleXrFramework/: CMakeLists.txt
Samples/SampleXrFramework/Src/: CompilerUtils.h  FrameParams.h  OVR_BinaryFile2.cpp  OVR_BinaryFile2.h  OVR_FileSys.cpp  OVR_FileSys.h  OVR_Lexer2.cpp  OVR_Lexer2.h  OVR_MappedFile.cpp  OVR_MappedFile.h  OVR_Stream.cpp  OVR_Stream.h  OVR_Stream_Impl.h  OVR_UTF8Util.cpp  OVR_UTF8Util.h  OVR_Uri.cpp  OVR_Uri.h  PackageFiles.cpp  PackageFiles.h  System.cpp  System.h  XrApp.cpp  XrApp.h
Samples/SampleXrFramework/Src/GUI/: ActionComponents.cpp  ActionComponents.h  AnimComponents.cpp  AnimComponents.h  CollisionPrimitive.cpp  CollisionPrimitive.h  DefaultComponent.cpp  DefaultComponent.h  Fader.cpp  Fader.h  GazeCursor.cpp  GazeCursor.h  GuiSys.cpp  GuiSys.h  Lerp.h  MetaDataManager.cpp  MetaDataManager.h  Reflection.cpp  Reflection.h  ReflectionData.cpp  ReflectionData.h  SoundLimiter.cpp  SoundLimiter.h  VRMenu.cpp  VRMenu.h  VRMenuComponent.cpp  VRMenuComponent.h  VRMenuEvent.cpp  VRMenuEvent.h  VRMenuEventHandler.cpp  VRMenuEventHandler.h  VRMenuMgr.cpp  VRMenuMgr.h  VRMenuObject.cpp  VRMenuObject.h  ui_default.h
Samples/SampleXrFramework/Src/Input/: ArmModel.cpp  ArmModel.h  AxisRenderer.cpp  AxisRenderer.h  ControllerRenderer.cpp  ControllerRenderer.h  HandMaskRenderer.cpp  HandMaskRenderer.h  HandRenderer.cpp  HandRenderer.h  Skeleton.cpp  Skeleton.h  SkeletonRenderer.cpp  SkeletonRenderer.h  TinyUI.cpp  TinyUI.h
Samples/SampleXrFramework/Src/Locale/: OVR_Locale.cpp  OVR_Locale.h  tinyxml2.cpp  tinyxml2.h
Samples/SampleXrFramework/Src/Misc/: Log.c  Log.h
Samples/SampleXrFramework/Src/Model/: ModelAnimationUtils.cpp  ModelAnimationUtils.h  ModelCollision.cpp  ModelCollision.h  ModelDef.h  ModelFile.cpp  ModelFile.h  ModelFileLoading.h  ModelFile_OvrScene.cpp  ModelFile_glTF.cpp  ModelRender.cpp  ModelRender.h  ModelTrace.cpp  ModelTrace.h  SceneView.cpp  SceneView.h
Samples/SampleXrFramework/Src/Render/: BeamRenderer.cpp  BeamRenderer.h  BillBoardRenderer.cpp  BillBoardRenderer.h  BitmapFont.cpp  BitmapFont.h  DebugLines.cpp  DebugLines.h  EaseFunctions.cpp  EaseFunctions.h  Egl.c  Egl.h  Framebuffer.cpp  Framebuffer.h  GeometryBuilder.cpp  GeometryBuilder.h  GeometryRenderer.cpp  GeometryRenderer.h  GlBuffer.cpp  GlBuffer.h  GlGeometry.cpp  GlGeometry.h  GlGeometryDescriptor.cpp  GlProgram.cpp  GlProgram.h  GlTexture.cpp  GlTexture.h  GlWrapperWin32.c  GlWrapperWin32.h  GpuState.h  PanelRenderer.cpp  PanelRenderer.h  ParticleSystem.cpp  ParticleSystem.h  PointList.cpp  PointList.h  Ribbon.cpp  Ribbon.h  SimpleBeamRenderer.h  SimpleCollisionRenderer.h  (+10 more)
Samples/XrSamples/: CMakeLists.txt
Samples/XrSamples/XrBodyFaceEyeSocial/: CMakeLists.txt  README.md
Samples/XrSamples/XrBodyFaceEyeSocial/Src/: main.cpp
Samples/XrSamples/XrBodyFaceEyeSocial/java/: MainActivity.java
Samples/XrSamples/XrColocationDiscovery/: CMakeLists.txt  README.md
Samples/XrSamples/XrColocationDiscovery/Src/: Anchor.h  CubesRenderer.cpp  CubesRenderer.h  HexStringHelper.h  IAnchorsRenderer.h  SimpleListUI.h  main.cpp
Samples/XrSamples/XrColocationDiscovery/java/: MainActivity.java
Samples/XrSamples/XrColorSpaceFB/: CMakeLists.txt  README.md
Samples/XrSamples/XrColorSpaceFB/Src/: main.cpp  openxr_reflection_macro.h
Samples/XrSamples/XrColorSpaceFB/java/: MainActivity.java
Samples/XrSamples/XrCompositor_NativeActivity/: CMakeLists.txt  README.md
Samples/XrSamples/XrCompositor_NativeActivity/Src/: XrCompositor_NativeActivity.c
Samples/XrSamples/XrControllers/: CMakeLists.txt  README.md
Samples/XrSamples/XrControllers/Src/: main.cpp
Samples/XrSamples/XrControllers/java/: MainActivity.java
Samples/XrSamples/XrDynamicObjects/: CMakeLists.txt  README.md
Samples/XrSamples/XrDynamicObjects/Src/: XrDynamicObjectTrackerHelper.cpp  XrDynamicObjectTrackerHelper.h  XrHandHelper.cpp  XrHandHelper.h  XrHelper.h  XrPassthroughHelper.cpp  XrPassthroughHelper.h  XrSpatialAnchorHelper.cpp  XrSpatialAnchorHelper.h  main.cpp
Samples/XrSamples/XrDynamicObjects/java/: MainActivity.java
Samples/XrSamples/XrHandDataSource/: CMakeLists.txt  README.md
Samples/XrSamples/XrHandDataSource/Src/: EnvironmentRenderer.cpp  EnvironmentRenderer.h  SkyboxRenderer.h  main.cpp  xr_hand_helper.h  xr_helper.h  xr_render_model_helper.h
Samples/XrSamples/XrHandDataSource/java/: MainActivity.java
Samples/XrSamples/XrHandTrackingWideMotionMode/: CMakeLists.txt  README.md
Samples/XrSamples/XrHandTrackingWideMotionMode/Src/: main.cpp  xr_hand_helper.h
Samples/XrSamples/XrHandTrackingWideMotionMode/java/: MainActivity.java
Samples/XrSamples/XrHandsAndControllers/: CMakeLists.txt  README.md
Samples/XrSamples/XrHandsAndControllers/Src/: ActionSetDisplayPanel.cpp  ActionSetDisplayPanel.h  EnvironmentRenderer.cpp  EnvironmentRenderer.h  SkyboxRenderer.cpp  SkyboxRenderer.h  main.cpp
Samples/XrSamples/XrHandsAndControllers/java/: MainActivity.java
Samples/XrSamples/XrHandsFB/: CMakeLists.txt  README.md
Samples/XrSamples/XrHandsFB/Src/: main.cpp
Samples/XrSamples/XrInput/: CMakeLists.txt  README.md
Samples/XrSamples/XrInput/Src/: main.cpp  (+2 more)
Samples/XrSamples/XrKeyboard/: CMakeLists.txt  README.md
Samples/XrSamples/XrMicrogestures/: CMakeLists.txt  README.md
Samples/XrSamples/XrPassthrough/: CMakeLists.txt  README.md
Samples/XrSamples/XrPassthroughOcclusion/: CMakeLists.txt  README.md
Samples/XrSamples/XrSceneModel/: CMakeLists.txt  README.md
Samples/XrSamples/XrSceneSharing/: CMakeLists.txt  README.md
Samples/XrSamples/XrSpaceWarp/: CMakeLists.txt  README.md
Samples/XrSamples/XrSpatialAnchor/: CMakeLists.txt  README.md
Samples/XrSamples/XrVirtualKeyboard/: CMakeLists.txt  README.md
(+176 files in other folders)
